<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HospitalTriageApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="load_file">Load patient data from existing information</string>
    <string name="uhip">Enter Health Card Number</string>
    <string name="button_lookup">Load Patient Profile</string>
    <string name="loadPatientList">Load Patient List</string>
    <string name="title_activity_display_patient_profile">DisplayPatientProfile</string>
    <string name="patientname">Name:</string>
    <string name="no_value">No Value</string>
    <string name="title_activity_display_patient_list">DisplayPatientList</string>
    <string name="title_activity_new_patient_history">NewPatientHistory</string>
    <string name="title_activity_add_new_patient_history">AddNewPatientHistory</string>
    <string name="title_activity_updatehistory">Updatehistory</string>
    <string name="title_activity_patient_medical_history">PatientMedicalHistory</string>
    <string name="add_new_patient_history">Add New Patient Visit Record</string>
    <string name="List_Patients">List of Patients</string>
    <string name="title_activity_list_patient_info">MainActivity</string>
    <string name="title_activity_list_patient_data">MainActivity</string>
    <string name="title_activity_list_of_patient_info">Patient Data</string>
    <string name="title_activity_display_patient_info">DisplayPatientInfo</string>
    <string name="create_new_record">Visit Record</string>
    <string name="update_info">Update The Newest Info</string>
    <string name="dob">Date Of Birth:</string>
    <string name="OHIP_number">Health Card Number:</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="arrival_time_of_patient">Arrival Time Of The Patient:</string>
    <string name="year">Year:</string>
    <string name="submit">Submit</string>
    <string name="year_example">e.g 2014 for 2014</string>
    <string name="month_example">e.g 05 for May</string>
    <string name="month">Month:</string>
    <string name="date">Date:</string>
    <string name="date_example">e.g 26 for 26th</string>
    <string name="hour">Hour:</string>
    <string name="hour_example">e.g 15 for 3 p.m.</string>
    <string name="blood_pressure">Systolic/Diatolic</string>
    <string name="temperature">Temperature:</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="vital_signs">Vital Signs:</string>
    <string name="title_activity_listof_patients">List Of Patients</string>
    <string name="list_of_patients">List Of Urgent Patients</string>
    <string name="patient_medical_history">Patient\'s Medical History</string>
    <string name="check_medical_history">Check Patient\'s Medical History</string>
    <string name="title_activity_load_patient">LoadPatientActivity</string>
    <string name="identity_question">Are you a nurse or a physician?</string>
    <string name="welcome">Welcome!</string>
    <string name="nurse_string">Nurse</string>
    <string name="physician_string">Physician</string>
    <string name="title_activity_load_patient_profile">Load Patient Profile</string>
    <string name="title_activity_nurse_login">Nurse Login</string>
    <string name="user_id">Nurse Triage App</string>
    <string name="enter_user">Username</string>
    <string name="enter_pass">Password</string>
    <string name="login_string">Log in</string>
    <string name="title_activity_physician_login">Physician Login</string>
    <string name="physician_user_id">Physician Triage App</string>
    <string name="title_activity_physician_look_up">Physician LookUp</string>
    <string name="addNewPatientError">Please enter the patient info</string>
    <string name="nurseErrorHandleString">Please enter your information.</string>
    <string name="loginErrorString">Please enter a ohip number</string>
    <string name="title_activity_physician_add_new_prescription">Add New Prescription</string>
    <string name="title_activity_physician_display_patient_profile">Patient Profile</string>
    <string name="string_logout">Log out</string>
    <string name="title_activity_add_new_patient">AddNewPatient</string>
    <string name="title_activity_diagnose_time">DiagnoseTime</string>
    <string name="title_activity_display_dates_seen_doctor">DisplayDatesSeenDoctor</string>

</resources>
