<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.AddNewPatientHistory" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="27dp"
        android:text="@string/arrival_time_of_patient"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextArrivalYear"
        android:layout_alignBottom="@+id/editTextArrivalYear"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/year" />

    <EditText
        android:id="@+id/editTextArrivalYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextArrivalDate"
        android:layout_alignRight="@+id/editTextArrivalMonth"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/year_example"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/editTextArrivalMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/editTextArrivalDate"
        android:layout_alignRight="@+id/editTextArrivalDate"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/month_example"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/editTextArrivalDate"
        android:text="@string/month" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextArrivalDate"
        android:layout_alignBottom="@+id/editTextArrivalDate"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/date" />

    <EditText
        android:id="@+id/editTextArrivalDate"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/arrivalTimeEditText"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/date_example"
        android:inputType="date"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/arrivalTimeEditText"
        android:layout_alignBottom="@+id/arrivalTimeEditText"
        android:layout_toLeftOf="@+id/arrivalTimeEditText"
        android:text="@string/hour" />

    <EditText
        android:id="@+id/arrivalTimeEditText"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/hour_example"
        android:inputType="time"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonAddRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editTextupdateHeartRate"
        android:layout_marginTop="22dp"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/editTextupdateHeartRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextupdateBloodPressure"
        android:layout_below="@+id/editTextupdateBloodPressure"
        android:ems="10"
        android:hint="75"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextupdateTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextupdateBloodPressure"
        android:layout_below="@+id/TextViewupdateVitalsigns"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="36.7"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/addNewPatientErrorHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAddRecord"
        android:layout_alignBottom="@+id/buttonAddRecord"
        android:layout_toRightOf="@+id/TextViewupdateVitalsigns"
        android:text="@string/addNewPatientError" />

    <EditText
        android:id="@+id/editTextupdateBloodPressure"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextupdateTemperature"
        android:layout_toRightOf="@+id/buttonAddRecord"
        android:ems="10"
        android:hint="120/90"
        android:inputType="text" />

    <TextView
        android:id="@+id/TextViewupdateVitalsigns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextArrivalYear"
        android:layout_marginTop="23dp"
        android:text="@string/vital_signs"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextupdateBloodPressure"
        android:layout_alignBottom="@+id/editTextupdateBloodPressure"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/addNewPatientErrorHandle"
        android:text="Blood Pressure"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextupdateTemperature"
        android:layout_alignBottom="@+id/editTextupdateTemperature"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/temperature"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextupdateHeartRate"
        android:layout_alignBottom="@+id/editTextupdateHeartRate"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/heart_rate"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="12sp" />

</RelativeLayout>
