<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.NurseLoginActivity" >

    <TextView
        android:id="@+id/nurseTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/user_id"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nurseEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/nurseTextView1"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/enter_user" />

    <Button
        android:id="@+id/nurseLoginButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nurseEditText2"
        android:layout_alignRight="@+id/nurseEditText2"
        android:layout_below="@+id/nurseEditText2"
        android:layout_marginTop="48dp"
        android:text="@string/login_string" />

    <EditText
        android:id="@+id/nurseEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nurseEditText1"
        android:layout_alignRight="@+id/nurseEditText1"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_pass" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/nurseErrorHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nurseEditText2"
        android:layout_below="@+id/nurseEditText2"
        android:layout_marginTop="14dp"
        android:text="@string/nurseErrorHandleString" />
    
</RelativeLayout>
