<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.LoadPatientProfile" >

    <EditText
        android:id="@+id/enteruhipeditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:ems="10"
        android:hint="@string/uhip" />

   

    <TextView
        android:id="@+id/errorHandleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enteruhipeditText"
        android:layout_below="@+id/enteruhipeditText"
        android:layout_marginTop="18dp"
        android:text="@string/loginErrorString" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addPatientbutton"
        android:layout_alignLeft="@+id/lookupbutton"
        android:layout_marginBottom="16dp"
        android:onClick="registerPerson"
        android:text="@string/list_of_patients" />

    <Button
        android:id="@+id/addPatientbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lookupbutton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:onClick="AddPatient"
        android:text="Add New Patient" />

    <Button
        android:id="@+id/lookupbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/errorHandleTextView"
        android:layout_marginBottom="16dp"
        android:text="@string/button_lookup" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/enteruhipeditText"
        android:layout_marginTop="25dp"
        android:text="@string/string_logout" />

</RelativeLayout>
