<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.PhysicianLoginActivity" >

    <TextView
        android:id="@+id/physicianTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/physician_user_id"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/physicianPassEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_pass" />

    <Button
        android:id="@+id/physician_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/physicianUserEditText"
        android:layout_alignRight="@+id/physicianPassEditText"
        android:layout_below="@+id/physicianPassEditText"
        android:layout_marginTop="51dp"
        android:text="@string/login_string" />

    <EditText
        android:id="@+id/physicianUserEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/physicianPassEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/physicianPassEditText"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/enter_user" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/doctorErrorHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/physician_login"
        android:layout_below="@+id/physicianPassEditText"
        android:layout_marginTop="20dp"
        android:text="" />


</RelativeLayout>
