<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.DisplayPatientProfile" >

    

    <TextView
        android:id="@+id/textViewdob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/patientmedicalhistorybutton"
        android:layout_alignLeft="@+id/uhiptextView"
        android:layout_marginBottom="19dp"
        android:text="@string/dob"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/PatientNametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uhiptextView"
        android:layout_alignLeft="@+id/createhistorybutton"
        android:layout_marginBottom="25dp"
        android:text="@string/patientname"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/patientuhiptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PatientNametextView"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/uhiptextView"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/PatientNametextView"
        android:layout_alignBottom="@+id/PatientNametextView"
        android:layout_centerHorizontal="true"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewpatientdob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewdob"
            android:layout_alignBottom="@+id/textViewdob"
            android:layout_alignLeft="@+id/patientuhiptextView"
            android:text="@string/no_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/patientmedicalhistorybutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/createhistorybutton"
            android:layout_alignLeft="@+id/createhistorybutton"
            android:text="@string/check_medical_history"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttoncheckwithdoc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createhistorybutton"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="49dp"
            android:text="Check with Doctor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/createhistorybutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttoncheckwithdoc"
            android:layout_centerHorizontal="true"
            android:text="@string/create_new_record"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_logout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/string_logout" />

        <TextView
            android:id="@+id/uhiptextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewdob"
            android:layout_alignLeft="@+id/PatientNametextView"
            android:layout_marginBottom="24dp"
            android:text="@string/OHIP_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonSeenByDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttoncheckwithdoc"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/buttoncheckwithdoc"
            android:onClick="setUpListSeenByDoctor"
            android:textSize="14sp"
            android:text="List of dates seen by a doctor" />

</RelativeLayout>
