<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.PhysicianLookUp" >

    <EditText
        android:id="@+id/physician_uhip_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:ems="10"
        android:hint="@string/uhip" >

        <requestFocus />

</EditText>
    
    <Button
        android:id="@+id/button_logout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/enteruhipeditText"
        android:text="@string/string_logout" />

    <Button
        android:id="@+id/physician_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/physician_uhip_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:onClick="lookupProfile"
        android:text="@string/button_lookup" />

    <TextView
        android:id="@+id/doctorEnterOhip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/physician_uhip_field"
        android:layout_below="@+id/physician_uhip_field"
        android:layout_marginTop="20dp"
        android:text="Please enter patient's ohip number" />

</RelativeLayout>
