<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitaltriageapp.PhysicianDisplayPatientProfile" >

    <Button
        android:id="@+id/patientprofilebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prescriptionbutton"
        android:layout_alignLeft="@+id/textViewdob"
        android:layout_marginBottom="30dp"
        android:text="Check Patient Profile"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewdob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/patientprofilebutton"
        android:layout_alignLeft="@+id/uhiptextView"
        android:layout_marginBottom="19dp"
        android:text="@string/dob"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/uhiptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewpatientdob"
        android:layout_alignLeft="@+id/PatientNametextView"
        android:layout_marginBottom="16dp"
        android:text="@string/OHIP_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/PatientNametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uhiptextView"
        android:layout_alignLeft="@+id/prescriptionbutton"
        android:layout_marginBottom="25dp"
        android:text="@string/patientname"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/patientuhiptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PatientNametextView"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/uhiptextView"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewpatientdob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewdob"
        android:layout_alignBottom="@+id/textViewdob"
        android:layout_centerHorizontal="true"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/PatientNametextView"
        android:layout_alignBottom="@+id/PatientNametextView"
        android:layout_centerHorizontal="true"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <Button
        android:id="@+id/prescriptionbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="86dp"
        android:text="Record Prescription"
        android:textSize="14sp" />

</RelativeLayout>
